<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/put_name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/page_title"
        app:layout_constraintTop_toBottomOf="@id/page_title" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:hint="@string/name_hint"
        app:layout_constraintBottom_toBottomOf="@id/name_box"
        app:layout_constraintLeft_toRightOf="@id/name_box"
        app:layout_constraintRight_toRightOf="@+id/page_title"
        app:layout_constraintTop_toTopOf="@id/name_box" />


    <TextView
        android:id="@+id/email_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/put_Email"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/name_box"
        app:layout_constraintTop_toBottomOf="@id/name_box" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:hint="@string/email_hint"
        app:layout_constraintBottom_toBottomOf="@id/email_box"
        app:layout_constraintLeft_toRightOf="@id/email_box"
        app:layout_constraintRight_toRightOf="@+id/page_title"
        app:layout_constraintTop_toTopOf="@id/email_box" />

    <TextView
        android:id="@+id/passwd_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/put_passwd"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/email_box"
        app:layout_constraintTop_toBottomOf="@id/email_box" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:hint="@string/passwd_hint"
        app:layout_constraintBottom_toBottomOf="@id/passwd_box"
        app:layout_constraintLeft_toRightOf="@id/email_box"
        app:layout_constraintRight_toRightOf="@+id/page_title"
        app:layout_constraintTop_toTopOf="@id/passwd_box" />

    <TextView
        android:id="@+id/passwd_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/check_passwd"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/passwd_box"
        app:layout_constraintTop_toBottomOf="@id/passwd_box" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:hint="@string/check_passwd_hint"
        app:layout_constraintBottom_toBottomOf="@id/passwd_check_box"
        app:layout_constraintLeft_toRightOf="@id/passwd_box"
        app:layout_constraintRight_toRightOf="@+id/page_title"
        app:layout_constraintTop_toTopOf="@id/passwd_check_box"
        android:textSize="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_signup"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwd_check_box" />
</androidx.constraintlayout.widget.ConstraintLayout>